--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Nikita<span> weds </span>Aayush</h1>
       <h2 style="color:white; ">30 April 2021</h2>
       <div class="countdown">Today is the Wedding!!</div> <br>
-      <a href="https://calendar.google.com/calendar/u/0/r/eventedit?dates=20210430T133000Z/20210430T133100Z&location=Mantram+Hotel+And+Resort+New+Delhi,+Delhi+110036&text=Nikita+weds+Aayush" class="myButton">Add Reminder</a>
+      <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210430T133000Z%2F20210430T182900Z&location=Mantram%20Hotel%20And%20Resort%2C%20Khampur%20New%20Delhi%2C%20Delhi%20India%2C%20Khampur%2C%20New%20Delhi%2C%20Delhi%20110036%2C%20India&text=Aayush%20and%20Nikita%27s%20Wedding" class="myButton">Add Reminder</a>
     </div>
   </header>
   <script src="main.js"></script>
