--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- <h1>Nikita<span> weds </span>Aayush</h1> -->
       <h2 style="color:white; ">30 April 2021</h2>
       <div class="countdown">🥳</div> <br>
-      <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210430T133000Z%2F20210430T182900Z&location=Mantram%20Hotel%20And%20Resort%2C%20Khampur%20New%20Delhi%2C%20Delhi%20India%2C%20Khampur%2C%20New%20Delhi%2C%20Delhi%20110036%2C%20India&text=Aayush%20and%20Nikita%27s%20Wedding" class="myButton">Save the Date</a>
+      <a href="https://calendar.google.com/calendar/u/0/r/eventedit?dates=20210430T133000Z/20210430T182900Z&location=Mantram+Hotel+And+Resort,+Khampur+New+Delhi,+Delhi+India,+Khampur,+New+Delhi,+Delhi+110036,+India&text=Aayush+and+Nikita%27s+Wedding" class="myButton">Save the Date</a>
       <br><br></div>
   </header>
   <script src="main.js"></script>
