--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div class="content">
-      <img src="weds.png" style="width:90%;margin-bottom: -25%;margin-top:-8%">
+      <img id= "weds" src="weds.png" style="width:90%">
       <!-- <h1>Nikita<span> weds </span>Aayush</h1> -->
       <h2 style="color:white; ">30 April 2021</h2>
       <div class="countdown">🥳</div> <br>
